--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,111 +1,111 @@
 .container {
-  padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.footer {
+.main {
+  height: 90vh;
+  width: 100%;
   display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.footer a {
+.main h1 {
+  font-size: 2rem;
+  background: linear-gradient(90deg, #B224EF 0%, #7579FF 100%);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.countSection {
+  height: 50%;
+  width: 80vw;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+.countSection h4 {
+  font-size: 2rem;
 }
 
 .code {
   background: #fafafa;
   border-radius: 5px;
   padding: 0.75rem;
-  font-size: 1.1rem;
+  font-size: 10rem;
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
-.grid {
+.body {
+  height: 100vh;
+  width: 100%;
+  background-color: #7579FF;
   display: flex;
-  align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+  align-items: flex-end;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+.adviceChart {
+  height: 80%;
+  width: 80%;
+  background-color: #fff;
+  border-radius: 1rem;
+  margin-bottom: 2rem;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.chartTitle {
+  height: 4rem;
+  width: 100%;
+  background-color: #B224EF;
+  border-radius: 1rem 1rem 0 0;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.chartTitle h1 {
+  margin: 0 0 0 2rem;
+  color: #fff;
+  font-size: 1.2rem;
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+.chartContent {
+  height: 3rem;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-weight: 600;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.col1, .col2, .col3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  border-width: 0px 1px 1px 0px;
+  border-color: #C4C4C4;
+  border-style: solid;
+}
+
+.col1 {
+  width: 10%;
+}
+
+.col2 {
+  width: 30%;
+}
+
+.col3 {
+  width: 60%;
+  border-width: 0px 0px 1px 0px;
 }
 
 @media (max-width: 600px) {
